--- a/style.css
+++ b/style.css
@@ -32,21 +32,21 @@ body {
     height: 70.73px;
 }
 
-.line-1, .line-2, .line-3, .line-4, .line-5 {
+.line {
     display: flex;
     align-items: center;
 }
 
 
-.line-1, .line-2, .line-3 {
+.line-odd {
     justify-content: flex-end;
 }
 
-.line-4, .line-5 {
+.line-even {
     justify-content: flex-start;
 }
 
-.border-1, .border-2, .border-3, .border-4, .border-5 {
+.border {
     border-top: 1px solid #2D9CDB;
     width: 100px;
 }
